--- a/studyTime/css/style.css
+++ b/studyTime/css/style.css
@@ -27,7 +27,7 @@ body.w {
 body {
     position: absolute;
     overflow: hidden;
-    background: url(https://picsum.photos/4928);
+    background: url(https://picsum.photos/1920/1080);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
